<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Cosmetics Store</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_pet">Add a Product</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_gender">Gender</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_breed">Breed</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_weight">Weight</string>

    <!-- Units for weight of the pet (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_pet_weight">kg</string>

    <!-- Label for dropdown menu option if the pet's gender is unknown [CHAR LIMIT=20] -->
    <string name="gender_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the pet is male [CHAR LIMIT=20] -->
    <string name="gender_male">Male</string>

    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="gender_female">Female</string>

    <string name="editor_insert_pet_failed">Insert Pet Failed</string>

    <string name="editor_insert_pet_successful">Insert Pet Successful</string>

    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <string name="empty_view_subtitle_text">Get started by adding a pet</string>

    <string name="editor_activity_title_edit_pet">Edit Pet</string>

    <string name="editor_update_pet_failed">Update Pet Failed</string>

    <string name="editor_update_pet_successful">Update Pet Successful</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_successful">Pet deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_failed">Error with deleting pet</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this pet?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for the pet's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="unknown_breed">Unknown breed</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_name">Name</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_price">Price $</string>
    <string name="category_supplier">Supplier</string>
    <string name="category_contacts">Contacts</string>
    <string name="currency">$</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="order_button">ORDER</string>
    <string name="delete_button">DELETE</string>
    <string name="editor_activity_title_product_details">Product Details</string>

    <string name="increase_button">+</string>

    <string name="decrease_button">-</string>
    <string name="edit_button">EDIT</string>
    <string name="action_edit">Edit</string>
    <string name="action_order">Order</string>
    <string name="editor_insert_product_failed">Insert Product Failed</string>
    <string name="editor_insert_product_successful">Insert Product Successful</string>
    <string name="editor_update_product_failed">Update Product Failed</string>
    <string name="editor_update_product_successful">Update Product Successful</string>
    <string name="editor_delete_product_successful">Delete Product Successful</string>
    <string name="editor_delete_product_failed">Delete Product Failed</string>
    <string name="empty_shop_text">Empty Store...</string>
    <string name="empty_store_subtitle_text"><![CDATA[Start adding cosmetics -->]]></string>


</resources>
