<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_name" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <TextView
                android:id="@+id/prod_name_tv"
                style="@style/EditorFieldStyle"
                android:inputType="textCapWords" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <TextView
                android:id="@+id/prod_price_tv"
                style="@style/EditorFieldStyle"
                android:inputType="number" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <Button
            android:id="@+id/decrease_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:onClick="decreaseQuantity"
            android:padding="5dp"
            android:text="@string/decrease_button"
            tools:ignore="OnClick" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <TextView
                android:id="@+id/prod_quant_tv"
                style="@style/EditorFieldStyle"
                android:inputType="number" />

        </RelativeLayout>

        <Button
            android:id="@+id/increase_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="addQuantity"
            android:text="@string/increase_button"
            tools:ignore="OnClick" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <TextView
                android:id="@+id/prod_sup_tv"
                style="@style/EditorFieldStyle"
                android:inputType="textCapWords" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_contacts" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <TextView
                android:id="@+id/sup_cont_tv"
                style="@style/EditorFieldStyle"
                android:inputType="number" />

        </RelativeLayout>

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/order_button" />

    </LinearLayout>

</LinearLayout>